feat: add prometheus instrumentation (#1361)
* feat: add prometheus instrumentation

* fix: instrumentation prometheus
