# src/routes/index.ts
@@ -31,6 +31,7 @@ import * as SessionController from '../controller/sessionController';
 import * as StatusController from '../controller/statusController';
 import verifyToken from '../middleware/auth';
 import * as HealthCheck from '../middleware/healthCheck';
+import * as prometheusRegister from '../middleware/instrumentation';
 import statusConnection from '../middleware/statusConnection';
 import swaggerDocument from '../swagger.json';
 
@@ -892,5 +893,9 @@ routes.get('/api-docs', swaggerUi.setup(swaggerDocument));
 //k8s
 routes.get('/healthz', HealthCheck.healthz);
 routes.get('/unhealthy', HealthCheck.unhealthy);
+
+//Metrics Prometheus
+
+routes.get('/metrics', prometheusRegister.metrics);
 
 export default routes;
